Bug 208814 - Combine function doesn't use files with ending .000
Summary: Combine function doesn't use files with ending .000
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4.0-beta3 "Single Step"
Platform: Ubuntu Linux
: HI normal
Target Milestone: ---
Assignee: Jan Lepper
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-28 21:30 UTC by floschroeck
Modified: 2015-07-12 01:24 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description floschroeck 2009-09-28 21:30:48 UTC
Version:            (using KDE 4.2.4)
Compiler:          cc
OS:                Linux (i686) release 2.6.28-15-generic
Installed from:    Ubuntu Packages

combining a splitted file, eg.:
bob.avi.000
bob.avi.001
bob.avi.002
bob.avi.003
isn't combined correctly. it seems, the .000 file is skipped and the resulting file is corrupt. Using "cat bob.avi.??? > bob.avi" works.
Comment 1 Marcin Gryszkalis 2011-03-05 12:45:48 UTC
GNU coreutils' split starts with 0, like
split -b 1024 -d srcfile -a3 prefix.
creates files starting with prefix.000
Comment 2 Simon Persson 2015-07-12 01:24:33 UTC
Git commit a92b4874e1d5fb855911476bf0831d457337f477 by Simon Persson.
Committed on 12/07/2015 at 01:19.
Pushed by persson into branch 'master'.

Allow krusader to combine files where the first part starts with .000

Patch by Gregor Petrin <gregap@gmail.com>. Thank you Gregor, looks nice! Please help out more if you have the time and motivation! :)

REVIEW: 118213

M  +8    -3    krusader/Splitter/combiner.cpp
M  +1    -0    krusader/Splitter/combiner.h

http://commits.kde.org/krusader/a92b4874e1d5fb855911476bf0831d457337f477