Allow krusader to combine files where the first part starts with .000

Patch by Gregor Petrin <gregap@gmail.com>. Thank you Gregor, looks nice! Please help out more if you have the time and motivation! :)

REVIEW: 118213
BUG: 208814